fix: horizontal scroll bar height

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -23,11 +23,13 @@ body {
     &::-webkit-scrollbar {
         background: var(--background-blue);
         width: 10px;
+        height: 10px;
     }
 
     &::-webkit-scrollbar-thumb {
         background: var(--coral);
         border-radius: 5px;
+        height: 10px;
     }
 }
 
